--- a/packages/ui/src/components/slider/SliderThumb.astro
+++ b/packages/ui/src/components/slider/SliderThumb.astro
@@ -14,7 +14,7 @@ const { class: className = "", ...rest } = Astro.props as Props;
   data-slot="slider-thumb"
   class={cn(
     "border-ring ring-ring/50 absolute size-4 cursor-grab rounded-full border-2 bg-white",
-    "-translate-x-1/2 group-data-[orientation=vertical]/slider:-translate-y-1/2 group-data-[orientation=vertical]/slider:translate-x-0",
+    "-translate-x-1/2 group-data-[orientation=vertical]/slider:translate-y-1/2 group-data-[orientation=vertical]/slider:translate-x-0",
     "transition-[color,box-shadow]",
     "hover:ring-4 focus:ring-4 focus:outline-none",
     "data-[dragging]:cursor-grabbing",
