--- a/packages/ui/src/components/input-group/InputGroupButton.astro
+++ b/packages/ui/src/components/input-group/InputGroupButton.astro
@@ -9,7 +9,13 @@ type GroupButtonSize = "xs" | "sm" | "icon-xs" | "icon-sm";
 type Props = {
   as?: HTMLTag;
   size?: GroupButtonSize;
-  variant?: "default" | "secondary" | "outline" | "ghost" | "destructive" | "link";
+  variant?:
+    | "default"
+    | "secondary"
+    | "outline"
+    | "ghost"
+    | "destructive"
+    | "link";
   type?: "button" | "submit" | "reset";
   class?: string;
 } & HTMLAttributes<"button">;
@@ -23,41 +29,46 @@ const {
   ...rest
 } = Astro.props as Props;
 
-const buttonSizeVariants = cva("text-sm shadow-none flex gap-2 items-center", {
-  variants: {
-    size: {
-      xs: "h-6 gap-1 px-2 rounded-[calc(var(--radius)-5px)] [&>svg:not([class*='size-'])]:size-3.5 has-[>svg]:px-2",
-      sm: "h-8 px-2.5 gap-1.5 rounded-md has-[>svg]:px-2.5",
-      "icon-xs": "size-6 rounded-[calc(var(--radius)-5px)] p-0 has-[>svg]:p-0",
-      "icon-sm": "size-8 p-0 has-[>svg]:p-0",
+const inputGroupButtonVariants = cva(
+  "gap-2 text-sm shadow-none flex items-center",
+  {
+    variants: {
+      size: {
+        xs: "h-6 gap-1 rounded-[calc(var(--radius)-3px)] px-1.5 [&>svg:not([class*='size-'])]:size-3.5",
+        sm: "",
+        "icon-xs":
+          "size-6 rounded-[calc(var(--radius)-3px)] p-0 has-[>svg]:p-0",
+        "icon-sm": "size-8 p-0 has-[>svg]:p-0",
+      },
+    },
+    defaultVariants: {
+      size: "xs",
     },
   },
-  defaultVariants: {
-    size: "xs",
-  },
-});
+);
 
 const Tag = rawTag ?? undefined;
 ---
 
-{Tag ? (
-  <Tag
-    {...rest}
-    data-slot="input-group-button"
-    class={cn(buttonSizeVariants({ size }), className)}
-  >
-    <slot />
-  </Tag>
-) : (
-  <Button
-    type={type}
-    variant={variant}
-    data-size={size}
-    data-slot="input-group-button"
-    class={cn(buttonSizeVariants({ size }), className)}
-    {...(rest as any)}
-  >
-    <slot />
-  </Button>
-)}
-
+{
+  Tag ? (
+    <Tag
+      {...rest}
+      data-slot="input-group-button"
+      class={cn(inputGroupButtonVariants({ size }), className)}
+    >
+      <slot />
+    </Tag>
+  ) : (
+    <Button
+      type={type}
+      variant={variant}
+      data-size={size}
+      data-slot="input-group-button"
+      class={cn(inputGroupButtonVariants({ size }), className)}
+      {...(rest as any)}
+    >
+      <slot />
+    </Button>
+  )
+}
